make mobile browser compatible

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "todolist",
   "version": "0.1.0",
+  "homepage": "/todolist",
   "private": true,
   "dependencies": {
     "@bubble-protocol/client": "^0.1.2",
@@ -28,9 +29,11 @@
   },
   "browserslist": {
     "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
+      "chrome >= 67",
+      "edge >= 79",
+      "firefox >= 68",
+      "opera >= 54",
+      "safari >= 14"
     ],
     "development": [
       "last 1 chrome version",
